# flowsom-rs

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/: distance.rs  lib.rs  neighborhood.rs  som.rs
