[package]
name = "flowsom-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.83"
description = "Rust-accelerated batch-learning SOM for FlowSOM"
license = "MIT"
repository = "https://github.com/sharifhsn/flowsom-rs"
readme = "README.md"
keywords = ["flowsom", "som", "self-organizing-map", "flow-cytometry", "bioinformatics"]
categories = ["science", "algorithms"]

[lib]
name = "flowsom_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = "0.28"
numpy = "0.28"
ndarray = { version = "0.17", features = ["rayon"] }
rayon = "1.11"
rand = "0.9"
rand_chacha = "0.9"

[dev-dependencies]
approx = "0.5"

[profile.release]
lto = true
codegen-units = 1
